--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
+title:            Jekyll gitbook
+longtitle:        Jekyll gitbook
 author:           elephant
 email:            15802111072@163.com
 description: >
